1. Refactor package structure to io.github.ozkanpakdil.swaggerific 2. Lombok removed 3. Graalvm 24 windows build tested, it is failing on runtime #15