@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.mascix</groupId>
+    <groupId>io.github.ozkanpakdil</groupId>
     <artifactId>swaggerific</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3</version>
     <name>swaggerific</name>
     <description>An alternative to famous REST client Postman, Swaggerific is written in java and fully open source.</description>
     <properties>
@@ -15,12 +15,11 @@
         <javafx.version>24</javafx.version>
         <javafx.plugin.version>0.0.8</javafx.plugin.version>
         <gluonfx.plugin.version>1.0.23</gluonfx.plugin.version>
-        <mainClass>swaggerific/com.mascix.swaggerific.SwaggerApplication</mainClass>
+        <mainClass>swaggerific/io.github.ozkanpakdil.swaggerific.SwaggerApplication</mainClass>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <sonar.organization>ozkanpakdil-github</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <lombok.version>1.18.30</lombok.version>
     </properties>
 
     <dependencies>
@@ -72,12 +71,6 @@
             <version>0.11.4</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
-        </dependency>
         <!--
         maybe we can use in the future.
         <dependency>
@@ -270,20 +263,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>${javafx.plugin.version}</version>
@@ -305,7 +284,7 @@
                 <configuration>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.mascix.swaggerific.SwaggerApplication</mainClass>
+                            <mainClass>io.github.ozkanpakdil.swaggerific.SwaggerApplication</mainClass>
                         </transformer>
                     </transformers>
                 </configuration>
@@ -349,6 +328,9 @@
                         <arg>&#45;&#45;add-exports=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</arg>
                         <arg>&#45;&#45;add-exports=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</arg>
                     </runtimeArgs>-->
+					<nativeImageArgs>
+						<arg>--enable-native-access=ALL-UNNAMED</arg>
+					</nativeImageArgs>
                 </configuration>
             </plugin>
         </plugins>
